fix spelling errors, tweak tabs section

--- a/release-notes/May_2016.md
+++ b/release-notes/May_2016.md
@@ -58,13 +58,13 @@ In May we made great progress on how to manage *stacks* of open editors. In the 
 
 ![Tabs](images/May/tabs.png)
 
-When you close an editor the last opened editor in the stack is restored, instead of closing the pane as it does today. In addition, we held a number of UX studies that have resulted in further improvments to the design, including:
+When you close an editor the last opened editor in the stack is restored, instead of closing the pane as it does today. In addition, we held a number of UX studies that have resulted in further improvements to the design, including:
 
 * Redesign of the overflow icon
-* Ability to specify if files from **Quick Open** are pinned or previewd
+* Ability to specify if files from **Quick Open** are pinned or previewed
 * Added a command to turn a previewed file into a pinned file
 
-There is **much** more work to be done but we do hope to start moving some of this to master in June.    
+There is **much** more work to be done but we will start moving this work to master in June.    
 
 ### Integrated terminal
 
